# apple-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
apple-rs/: Cargo.toml
apple-rs-sys/: Cargo.toml  README.md  build.rs
apple-rs-sys/src/: lib.rs
apple-rs-sys/src/appkit/: mod.rs
apple-rs-sys/src/appkit/nsapplication/: mod.rs  ns_application.rs  ns_application_delegate.rs
apple-rs-sys/src/foundation/: mod.rs  ns_notification.rs  ns_string.rs
apple-rs-sys/src/system/: boolean.rs  id.rs  mod.rs  traits.rs
apple-rs-sys/src/utils/: class.rs  mod.rs  objective.rs
