[package]
name = "apple-rs-sys"
version = "0.0.1-pre.1"
edition = "2021"
description = "A library for interacting with Apple frameworks from Rust."
repository = "https://github.com/coffeekit/apple-rs"
license = "LGPL-3.0-or-later"
homepage = "https://github.com/coffeekit/apple-rs"
documentation = "https://docs.rs/apple-rs-sys"
catagories = ["ffi", "os::macos-apis", "os::ios-apis", "os::tvos-apis", "os::watchos-apis"]
keywords = ["ffi", "apple", "appkit", "uikit"]
authors = ["CoffeeKit Contributors"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
objc = { version = "0.2.6", optional = true }
objc2 = { version = "0.4.0", optional = true }
core-foundation = { version = "0.9.3", optional = true }

[features]
default = ["objc", "servo-cf", "appkit"]
servo-cf = ["dep:core-foundation"]
objc = ["dep:objc"]
objc2 = ["dep:objc2"]
appkit = []