[package]
name = "apple-rs"
version = "0.0.0"
edition = "2021"
description = "A library for interacting with Apple frameworks from Rust."
repository = "https://github.com/coffeekit/apple-rs"
license = "LGPL-3.0-or-later"
homepage = "https://github.com/coffeekit/apple-rs"
documentation = "https://docs.rs/apple-rs-sys"
catagories = ["ffi", "os::macos-apis", "os::ios-apis", "os::tvos-apis", "os::watchos-apis"]
keywords = ["ffi", "apple", "appkit", "uikit"]
authors = ["CoffeeKit Contributors"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
